# AgreementTesting

./: AgreementTesting.cpp  AgreementTesting.h  CMakeLists.txt  ConstructGraph.cpp  ConstructGraph.h  EulerTourTree.cpp  EulerTourTree.h  GetDecomposition.cpp  GetDecomposition.h  HDT.cpp  HDT.h  HelperDataStructure.h  InputGenerator.cpp  InputGenerator.h  InputTreeNode.cpp  InputTreeNode.h  LICENSE  NewickReader.cpp  NewickReader.h  OutputChecker.cpp  OutputChecker.h  README.md  Treap.cpp  Treap.h  TreapNode.h  main.cpp
output/: example0.txt
